# Nelder-Mead-method

./: .gitignore  NVM1.sln  README.md
NVM1/: NVM1.cpp  NVM1.vcxproj  NVM1.vcxproj.filters  neldermead.h  tinyexpr.cpp  tinyexpr.h
NelderMeadUI/: Form1.Designer.cs  Form1.cs  FormMain.Designer.cs  FormMain.cs  Program.cs
TestsForMethod/: NelderMeadTests.cs  TestsForMethod.csproj
with_cmake/: .gitignore  CMakeLists.txt  README.md
with_cmake/src/: CMakeLists.txt  main.cpp  neldermead.cpp  tinyexpr.cpp  tinyexpr.h
with_cmake/test/: CMakeLists.txt  test.cpp
